<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment"
    android:orientation="vertical"
    android:background="#fff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:id="@+id/blacklist_back_button"
            tools:ignore="RtlSymmetry">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_margin="12dp"
                android:background="@drawable/tint_back_arrow"
                android:contentDescription="@string/go_back"
                />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/black_list"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:textColor="@color/tint"
            />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/blacklist_unselect_all_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uncheck_everyone"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textColor="#1515B9"
            android:alpha="0.7"
            />
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:id="@+id/blacklist_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
</LinearLayout>