<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".fragments.main.AddMarkFragment">

    <LinearLayout
        android:id="@+id/bs"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/add_mark"
            android:textColor="@color/tint"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="Невский пр., 102, 2 этаж, Санкт-Петербург, Россия"
            android:textColor="@color/font"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_carousel"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/text"
            android:textColor="@color/font"
            android:textColorHint="#8C8C8C"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_mark_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/tint"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/add"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:rippleColor="#5757CD" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_mark_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/danger"
            app:cornerRadius="10dp"
            app:rippleColor="#E37676" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>