<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.MainFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"/>

    <com.example.flocator.views.RoundedButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="Text"
        android:textColor="@color/white"
        app:rb_bg_color="@color/tint"
        app:rb_round_corners="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_add_mark_fragment"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/add_mark"
        android:textColor="@color/tint"
        android:textSize="16sp"
        app:icon="@drawable/add_mark_image"
        app:strokeColor="#1F121212" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/community_btn"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/main_fragment_btn_bg"
        android:contentDescription="@string/community_button"
        android:src="@drawable/community_image" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/target_btn"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/main_fragment_btn_bg"
        android:contentDescription="@string/target_button"
        android:src="@drawable/target_image" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/settings_btn"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/main_fragment_btn_bg"
        android:contentDescription="@string/settings_button"
        android:src="@drawable/settings_image" />


</RelativeLayout>