<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="24dp"
    android:paddingVertical="12dp"
    android:id="@+id/friend_element"
    >
    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/friend_back"
        android:src="@drawable/privacy_friend_circle"
        android:contentDescription="@string/your_friend" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/friend_avatar"
        android:src="@drawable/avatar_svgrepo_com"
        app:layout_constraintLeft_toLeftOf="@id/friend_back"
        app:layout_constraintRight_toRightOf="@id/friend_back"
        app:layout_constraintTop_toTopOf="@id/friend_back"
        app:layout_constraintBottom_toBottomOf="@id/friend_back"
        />
    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/friend_tick_field"
        android:src="@drawable/privacy_friend_tick_field"
        android:contentDescription="@string/set_a_tick" />
    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/friend_tick"
        android:src="@drawable/privacy_friend_tick"
        android:contentDescription="@string/tick_is_set" />
    <TextView
        android:layout_width="0dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/friend_name"
        tools:text="Емельянов Виталий"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/friend_back"
        app:layout_constraintRight_toRightOf="@id/friend_back"
        app:layout_constraintTop_toBottomOf="@id/friend_back"

        />
</androidx.constraintlayout.widget.ConstraintLayout>