<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="35dp"
    android:layout_gravity="center_vertical"
    android:isScrollContainer="true"
    android:paddingBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bs"
        android:paddingVertical="8dp"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/settings_delete_account_popup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleting_account_title"
                android:textColor="@color/tint"
                android:gravity="center"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/delete_account_close_button"
                app:layout_constraintBottom_toBottomOf="@id/delete_account_close_button"
                />
<!--            <FrameLayout-->
<!--                android:id="@+id/delete_account_close_button"-->
<!--                android:padding="10dp"-->
<!--                app:layout_constraintLeft_toRightOf="@id/settings_delete_account_popup_title"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@id/drag_handle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="end">-->
                <ImageView
                    android:id="@+id/delete_account_close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/settings_delete_account_popup_title"
                    android:src="@drawable/settings_close_popup"
                    android:padding="8dp"
                    android:contentDescription="@string/close_window"/>
<!--            </FrameLayout>-->

        <TextView
            android:id="@+id/type_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pass_2_confirm"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/delete_account_close_button"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="0dp"
            android:paddingHorizontal="20dp"
            android:background="#FFF"
            app:boxStrokeWidth="0dp"
            android:textColorHint="#CECECE"
            android:hint=" "
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:boxStrokeWidthFocused="0dp"
            tools:ignore="HardcodedText"
            app:layout_constraintTop_toBottomOf="@id/type_password_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textSize="16sp"
                android:padding="0dp"
                android:hint="@string/pass"
                android:id="@+id/delete_account_pass_field"
                android:inputType="textPassword"
                android:background="@drawable/settings_popup_textfields"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout"
            android:gravity="center"
            android:textColor="#b91515"
            android:id="@+id/delete_account_message"
            android:layout_marginTop="8dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_account_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cornerRadius="9dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:backgroundTint="@color/tint"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/delete_account_message"
            app:layout_constraintLeft_toLeftOf="@id/password_input_layout"
            app:layout_constraintRight_toRightOf="@id/password_input_layout"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>